# RedStar

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compare-renderers.sh  run-mac.sh  vcpkg.json
apps/cwr/Game/: CMakeLists.txt  GameApplication.cpp
apps/cwr/GameDemo/: CMakeLists.txt
apps/cwr/Server/: CMakeLists.txt
apps/spikes/PboParitySpike/: CMakeLists.txt  main.cpp
apps/spikes/PboReadSpike/: CMakeLists.txt  main.cpp
apps/spikes/RustSpike/: CMakeLists.txt  main.cpp
apps/tetris/Tetris/: CMakeLists.txt
apps/tools/Studio/: CMakeLists.txt
apps/tools/Tools/: CMakeLists.txt
cmake/: DistCopy.cmake  PoseidonArchive.cmake  PoseidonRust.cmake
cmake/presets/: mac.json
cmake/toolchains/: mac-arm64-clang.cmake
cmake/vcpkg-triplets/: arm64-osx-clang.cmake
engine/Poseidon/: CMakeLists.txt
engine/Poseidon/Dev/Debug/: DebugCheats.cpp  DebugOverlay.cpp  DebugOverlay.hpp
engine/Poseidon/Foundation/: platform.hpp
engine/Poseidon/Foundation/Common/: Platform.cpp  PlatformPaths_posix.cpp
engine/Poseidon/Foundation/Math/: MathOpt.cpp  V3QuadsP3.cpp
engine/Poseidon/Foundation/Memory/: MemGrow.cpp
engine/Poseidon/Foundation/Platform/: AppConfig.cpp  CrashHandler.cpp
engine/Poseidon/Foundation/Threads/: PoCritical.cpp  PoSemaphore.cpp  PoSemaphore.hpp
engine/Poseidon/Foundation/Types/: Memtype.h
engine/Poseidon/Graphics/: GraphicsEngineFactory.hpp
engine/Poseidon/Graphics/Core/: Engine.hpp  MatrixConversion.cpp  MatrixConversion.hpp
engine/Poseidon/IO/: PackFiles.cpp
engine/Poseidon/UI/: OptionsUIApp.cpp
engine/PoseidonArchive/: Cargo.toml  README.md  build.rs  cbindgen.toml
engine/PoseidonArchive/include/: poseidon_archive.h
engine/PoseidonArchive/src/: lib.rs
engine/PoseidonFormats/: CMakeLists.txt  PoseidonFormats.cpp
engine/PoseidonGL33/: EngineGL33.cpp  EngineGL33.hpp  EngineGL33_Queue.cpp  EngineGL33_Shaders.cpp  EngineGL33_State.cpp  TextureGL33_Init.cpp
engine/PoseidonMetal/: CMakeLists.txt  EngineFactoryMetal.hpp  EngineMetal.hpp  EngineMetal.mm  GraphicsBackendMetal.cpp  TextureMetal.hpp  TextureMetal.mm
engine/PoseidonMetal/Shaders/: Shaders.metal
engine/PoseidonOpenAL/: OpenALRuntime.hpp
engine/PoseidonRust/: Cargo.toml  README.md  build.rs  cbindgen.toml
engine/PoseidonRust/include/: poseidon_rust.h
engine/PoseidonRust/src/: lib.rs
tests/integration/rendering/: metal_renders_scene.test.sqf
tests/smoke/: metal_demo_render.tests.sh
tests/unit/apps/Server/: CMakeLists.txt
tests/unit/apps/Tetris/: CMakeLists.txt
tests/unit/engine/Poseidon/: CMakeLists.txt
tests/unit/engine/Poseidon/Foundation/Common/: test_platformPaths.cpp
tests/unit/engine/Poseidon/Foundation/Math/: test_geometry_math.cpp
tests/unit/engine/Poseidon/Foundation/Platform/: test_crash_handler.cpp
tests/unit/engine/Poseidon/Graphics/: test_vertex_color_byte_order.cpp
tests/unit/engine/PoseidonArchive/: CMakeLists.txt  test_pbo_parity.cpp
